Please enter the commit message for your changes. Lines starting with '#' will be ignored, and an empty message aborts the commit.
 On branch master
 Your branch is up to date with 'origin/1.0'.

 Changes to be committed:
	modified:   constitution.html
	modified:   diplomacy.html
	modified:   government.html
	modified:   government_agencies.html
	modified:   index.html
	modified:   national_bank.html
	new file:   navbar.html
	modified:   news.html
	modified:   resources/css/index.css
	new file:   resources/css/sticky-footer-navbar.css
	new file:   resources/js/bootstrap.min.js
	new file:   resources/js/jquery-3.3.1.slim.min.js
	new file:   resources/js/navbar.html
	new file:   resources/js/navbar.js
	new file:   resources/js/popper.min.js
	new file:   test.html
	modified:   the_presedent.html

--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -26,6 +26,12 @@ text-align:center
   #mail{
     text-align: center
   }
+  /*navbar 2*/
+  .navbar-brand {
+    text-align:center
+    width 100%;
+    position:absolute;
+  }
  /* navbar */
 ul {
     list-style-type: none;
